2008-12-03  Sébastien Granjoux  <seb.sfo@free.fr>

	* src/anjuta.c:
	Allow to pass project path in command line instead of only URI

	* plugins/project-manager/anjuta-project-manager.plugin.in,
	libanjuta/anjuta-plugin-description.c,
	libanjuta/anjuta-plugin-description.h,
	libanjuta/anjuta-plugin-handle.c,
	libanjuta/anjuta-profile-manager.c:
	Fix #548873: File->Close project menu remains active after closing
	a project

	* manuals/reference/libanjuta/plugin-description-file.sgml,
	manuals/reference/libanjuta/libanjuta-sections.txt,
	libanjuta/anjuta-profile.c,
	libanjuta/anjuta-profile.h,
	libanjuta/anjuta-profile-manager.h:
	Document AnjutaProfile and AnjutaProfileManager

2008-11-30  Johannes Schmid  <jhs@gnome.org>

	* plugins/devhelp/Makefile.am:
	* plugins/devhelp/anjuta-go-help-next.svg:
	* plugins/devhelp/anjuta-go-help-prev.svg:
	Removed icons
	
	* plugins/devhelp/plugin.c (on_online_clicked), (on_load_finished),
	(devhelp_activate):
	* plugins/devhelp/plugin.h:
	Added button to access online API help (library.gnome.org) and improved 
	back/forward handling

2008-11-30  Johannes Schmid  <jhs@gnome.org>

	Patch from: Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
	* plugins/devhelp/plugin.c (devhelp_tree_link_selected_cb),
	(devhelp_search_link_selected_cb), (on_go_back_clicked),
	(on_go_forward_clicked), (api_reference_idle), (devhelp_activate),
	(devhelp_deactivate), (ihelp_search):
	* plugins/devhelp/plugin.h:
	#562750 – The view should be showed when you search something.
	
	* plugins/message-view/message-view.c (message_view_instance_init),
	(update_button_labels), (imessage_view_append),
	(imessage_view_clear), (message_view_tree_view_filter):
	Add a button to suppress normal message (show errors & warnings only)
	Use fixed height mode to optimize performance

2008-11-30  Naba Kumar  <naba@gnome.org>

	Patch from: Ignacio Casal Quinteiro
 
	* libanjuta/anjuta-c-module.c (anjuta_c_module_get_last_error):