@@ -232,7 +232,7 @@ The extension will be added according to the type.</property>
                         <child>
                           <widget class="GtkCheckButton" id="new.file.template">
                             <property name="visible">True</property>
-                            <property name="sensitive">False</property>
+                            <property name="sensitive">True</property>
                             <property name="can_focus">True</property>
                             <property name="label" translatable="yes">Use Template for the Header file</property>
                             <property name="use_underline">True</property>
